--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
     "autoprefixer": "10.2.5",
+    "axios": "^1.2.1",
     "base-64": "^1.0.0",
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "kase": "^0.10.0",
+    "moment": "^2.29.4",
     "postcss": "8.2.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-moment": "^1.1.3",
     "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "tailwindcss": "2.0.4"
   },
