--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.1",
     "base-64": "^1.0.0",
     "chart.js": "2.9.4",
+    "flowbite": "^1.6.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "kase": "^0.10.0",
